Updated properties logic Now home page can show item's properties too and switch between different property types. Drive can show pie chart of its space (available and used) and also other useful info

--- a/FileExplorer/UI/UserControls/ItemIPropertiesPanel.xaml
+++ b/FileExplorer/UI/UserControls/ItemIPropertiesPanel.xaml
@@ -16,11 +16,12 @@
     <UserControl.Resources>
         <DataTemplate x:Name="DirectoryItemPropertiesView" x:DataType="local:ItemPropertiesPanel">
             <storageProperties:DirectoryItemPropertiesViewer
-                Item="{x:Bind (properties:DirectoryItemBasicProperties)ViewModel.Properties, Mode=OneWay}" />
+                Properties="{x:Bind ViewModel.Properties, Mode=OneWay}" />
         </DataTemplate>
 
-        <DataTemplate x:Name="DrivePropertiesView" x:DataType="properties:DriveBasicProperties">
-            <TextBlock Text="{x:Bind Name}" />
+        <DataTemplate x:Name="DrivePropertiesView" x:DataType="local:ItemPropertiesPanel">
+            <storageProperties:DriveProperties 
+                Properties="{x:Bind ViewModel.Properties, Mode=OneWay}" />
         </DataTemplate>
 
         <contentSelectors:PropertiesPaneTemplateSelector x:Name="TemplateSelector"
