Implemented first version of storage sorter Now user can view directories before files. System can sort items by any property, but this functionality currently not used

--- a/FileExplorer/Views/Settings/Pages/SettingsPreferencesPage.xaml
+++ b/FileExplorer/Views/Settings/Pages/SettingsPreferencesPage.xaml
@@ -71,6 +71,19 @@
 
             </controls:SettingsCard>
 
+
+            <controls:SettingsCard
+                Header="List and sort directories before files">
+                <controls:SettingsCard.HeaderIcon>
+                    <FontIcon FontSize="14" Glyph="&#xF12B;" />
+                </controls:SettingsCard.HeaderIcon>
+
+                <controls:SettingsCard.Content>
+                    <ToggleSwitch IsOn="{x:Bind ViewModel.PageSettings.FoldersFirst, Mode=TwoWay}" />
+                </controls:SettingsCard.Content>
+
+            </controls:SettingsCard>
+
         </StackPanel>
     </Grid>
 </Page>
